ferritin/src/snapshots/ferritin__tests__get_crate_root_interactive_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_interactive_for_tests_rooted(Commands::get(\"crate\"), &\nget_fixture_crate_path ())"
---
"   Item: fixture_crate                                                          "
"   Kind: Module                                                                 "
"   Visibility: Public                                                           "
"   Defined at: fixture_crate                                                    "
"   In crate: fixture-crate (0.1.0)                                              "
"                                                                                "
"   A minimal test crate for rustdoc JSON testing                                "
"                                                                                "
"   Modules                                                                      "
"                                                                                "
"     ◦ link_resolution_tests                                                    "
"       Module for testing intra-doc link resolution                             "
"                                                                                "
"     ◦ markdown_test                                                            "
"       Markdown: Syntax                                                         "
"     ╰─[...]                                                                    "
"                                                                                "
"     ◦ namespace_collisions                                                     "
"       Module for testing namespace disambiguation with kind discriminators.    "
"                                                                                "
"       Contains a sub-module and a function that share the same name, creating  "
"       a genuine module-function collision in rustdoc's paths map.              "
"                                                                                "
"     ◦ prefix_tests                                                             "
"     │ Edge cases for path-prefix resolution in use-item sources and intra-doc  "
"     │ links.                                                                   "
"     │                                                                          "
"     │ Rustdoc emits Use::source and intra-doc link targets verbatim from the   "
"     │ Rust source: crate::, self::, and super:: prefixes are kept as-written.  "
"     │ When the corresponding id resolves to an item in the local crate's       "
"     │ index (as is the case for all the pub uses below), the iterator never    "
"     │ needs to fall back to resolving the source string. The cross-crate       "
"     │ counterparts live in tests/test-workspace/crate-b — those actually       "
"     │ exercise the fallback path.                                              "
"     ╰─[...]                                                                    "
"                                                                                "
"     ◦ reexport_mod                                                             "
"                                                                                "
"     ◦ submodule                                                                "
"       A module with items                                                      "
"                                                                                "
"   Structs                                                                      "
"                                                                                "
"     ◦ GenericStruct                                                            "
"     │ A generic struct for testing multi-paragraph documentation.              "
"     │                                                                          "
"     │ This struct demonstrates how generics work with complex type bounds and  "
"     │ provides a comprehensive example of the generic system in Rust.          "
"     ╰─[...]                                                                    "
"                                                                                "
"     ◦ ReachableViaPrivateModule                                                "
"       A struct accessible only via re-export from a private module.            "
"                                                                                "
"     ◦ SubStruct                                                                "
"       A struct in a submodule                                                  "
"                                                                                "
"     ◦ TestStruct                                                               "
"     │ A simple struct for testing basic functionality.                         "
"     │                                                                          "
"     │ This struct demonstrates basic usage patterns and should show completely "
"     │  since it only has one paragraph of documentation.                       "
"     ╰─[...]                                                                    "
"                                                                                "
"     ◦ TupleStruct                                                              "
"       A tuple struct for testing                                               "
"                                                                                "
"     ◦ UnitStruct                                                               "
"       A unit struct for testing                                                "
"                                                                                "
"   Enums                                                                        "
"                                                                                "
"     ◦ GenericEnum                                                              "
"       A generic enum for testing                                               "
"                                                                                "
"       See also crate::TestEnum                                                 "
"                                                                                "
"     ◦ TestEnum                                                                 "
"       An enum for testing                                                      "
"                                                                                "
"       This is like crate::GenericEnum but without the generic                  "
"                                                                                "
"   Traits                                                                       "
"                                                                                "
"     ◦ ComplexTrait                                                             "
"       A more complex trait demonstrating various features                      "
"                                                                                "
"     ◦ TestTrait                                                                "
"     │ A trait for testing extremely long documentation that exceeds line       "
"     │ limits.                                                                  "
"     │                                                                          "
"     │ This trait provides a comprehensive interface for data processing        "
"     │ operations. It demonstrates various method signatures including mutable  "
"     │ references, error handling, and different return types. The trait is     "
"     │ designed to be flexible and extensible for different use cases in data   "
"     │ processing pipelines. Each method serves a specific purpose in the data  "
"     │ transformation workflow. The implementation should handle edge cases     "
"     │ gracefully and provide meaningful error messages when operations fail.   "
"     │ This documentation intentionally spans many lines to test the            "
"     │ line-based truncation when paragraph truncation doesn't apply. We want   "
"     │ to see how the system handles documentation that goes well beyond the    "
"     │ 16-line limit and should trigger line-based truncation. This continues   "
"     │ for several more lines to ensure we exceed the limit. Line 14 of this    "
"     │ very long paragraph that should be truncated. Line 15 of this extremely  "
"     │ verbose documentation example. Line 16 which should be the last line     "
"     │ shown in brief mode. Line 17 that should be hidden and show a            "
"     │ truncation indicator. Line 18 that definitely won't be visible in brief  "
"     │ mode.                                                                    "
"     ╰─[...]                                                                    "
"                                                                                "
"   Functions                                                                    "
"                                                                                "
"     ◦ async_function                                                           "
"       An async function                                                        "
"                                                                                "
"     ◦ generic_function                                                         "
"       A generic function                                                       "
"                                                                                "
"     ◦ sub_function                                                             "
"       A function in a submodule                                                "
"                                                                                "
"     ◦ test_function                                                            "
"       A public function                                                        "
"                                                                                "
"   Constants                                                                    "
"                                                                                "
"     ◦ TEST_CONSTANT                                                            "
"       A const for testing                                                      "
"                                                                                "
"   Statics                                                                      "
"                                                                                "
"     ◦ TEST_STATIC                                                              "
"       A static for testing                                                     "
"                                                                                "
"   Variants                                                                     "
"                                                                                "
"     ◦ VariantA                                                                 "
"       Variant A (see also crate::GenericEnum)                                  "
"                                                                                "
"     ◦ VariantB                                                                 "
"       Variant B with data                                                      "
"                                                                                "
"     ◦ VariantC                                                                 "
"       Variant C with struct data (name and value)                              "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂"
"   ferritin - q:quit ?:help ←/→:history g:go s:search l:list c:code             "
